# resource_management

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml  plugins.xml
include/artificial_life/: ArtificialLife.h
include/message_storage/: MessageAbstraction.h  MessageWrapper.h  PriorityHolder.h  ReactiveBuffer.h  ReactiveBufferStorage.h
include/resource_management/: CoordinationSignals.h  ReactiveInputs.h  ResourceManager.h  StateMachines.h
include/resource_management/artificial_life/: ArtificialLife.h
include/resource_management/message_storage/: BufferPriority.h  MessageAbstraction.h  MessagePriority.h  MessageWrapper.h  PriorityHolder.h  ReactiveBuffer.h  ReactiveBufferStorage.h
include/resource_management/plugins/: EventsInterface.h  EventsPluginTest.h
include/resource_management/state_machine/: CoordinationSignalsStorage.h  CoordinationState.h  CoordinationStateMachine.h  CoordinationTransition.h  EventStorage.h  StateMachine.h  StateMachineRunner.h  StateMachineState.h  StateMachineTransition.h  StateMachinesStorage.h  StateStorage.h
include/resource_management/tools/: CoordinationServerBase.h  topic_name.h
include/state_machine/: CoordinationSignalsStorage.h  CoordinationState.h  CoordinationStateMachine.h  CoordinationTransition.h  StateStorage.h
led_manager_test/: _CMakeLists.txt  _package.xml  deploy
led_manager_test/include/led_manager_test/: ArtificialLife.h
led_manager_test/msg/: Color.msg  CoordinationStateColor.msg  CoordinationStateOnOff.msg  OnOff.msg
led_manager_test/src/: ArtificialLife.cpp  LedManagerCoordinationPublisher.cpp  LedManagerStateMachinePublisher.cpp  led_manager_test.cpp
led_manager_test/srv/: CoordinationSignal.srv
led_manager_test/test/: main.test  test.cpp
manager_generator/: README  gen_main.py  generate.py  generate_msgs.py  template_artificialLife.cpp  template_artificialLife.h  template_main.cpp
manager_generator/test/: template_main.test  template_test.cpp
msg/: CoordinationSignalHeader.msg  CoordinationSignalsStatus.msg  CoordinationStateHeader.msg  CoordinationTransition.msg  EndCondition.msg  MessagePriority.msg  PrioritiesSetter.msg  PriorityTargetHeader.msg
resource_management/: CMakeLists.txt  package.xml  plugins.xml
resource_management/include/resource_management/: ResourceManager.h  StateMachines.h
resource_management/include/resource_management/API/: StateMachineClient.h  StateMsg.h  StatesMsg.h
resource_management/include/resource_management/message_storage/: MessageAbstraction.h  MessagePriority.h  PriorityHolder.h
resource_management/include/resource_management/plugins/: EventsInterface.h  EventsPluginStr.h  EventsPluginTest.h
resource_management/include/resource_management/state_machine/: EventStorage.h  StateMachineState.h  StateMachineTransition.h  StateMachinesStorage.h  StateStorage.h
resource_management/include/resource_management/tools/: StateMachineServer.h  StateMachineServerBase.h  StateMsg.h
resource_management/led_manager_test/: _CMakeLists.txt  _package.xml  deploy
resource_management/led_manager_test/src/: LedManagerStateMachinePublisher.cpp  led_manager_test.cpp
resource_management/led_manager_test/test/: test.cpp
resource_management/manager_generator/: generate.py  generate_msgs.py  template_artificialLife.h  template_main.cpp  template_main_synchronised.cpp  template_manager.cpp  template_manager.h
resource_management/manager_generator/test/: template_test.cpp
resource_management/src/: st_main.cpp
resource_management/src/plugins/: EventsPluginStr.cpp
resource_management/src/state_machine/: EventStorage.cpp  StateMachineRunner.cpp  StateMachineState.cpp  StateMachineTransition.cpp  StateMachinesStorage.cpp  StateStorage.cpp
resource_management_msgs/: CMakeLists.txt  package.xml
resource_management_msgs/msg/: MessagePriority.msg  PrioritiesSetter.msg  StateMachineStateHeader.msg
resource_management_msgs/srv/: StateMachinesCancel.srv
resource_synchronizer/: CMakeLists.txt  README.md  package.xml
resource_synchronizer/include/resource_synchronizer/: StateMachine.h  StateMachinesHolder.h  StateMachinesManager.h  demo.cpp
resource_synchronizer/include/resource_synchronizer/synchronizer/: StateMachineSynchroHolder.h  StateMachinesSynchronizer.h
resource_synchronizer/include/resource_synchronizer/tools/: MetaStateMachineClient.h  MetaStateMachineServer.h
resource_synchronizer/src/: StateMachinesManager.cpp  server_test.cpp
resource_synchronizer/src/synchronizer/: StateMachineSynchroHolder.cpp  StateMachinesSynchronizer.cpp
resource_synchronizer/synchronizer_generator/: README.md  generate_synchronizer.py  template_resource_synchronizer.cpp  template_resource_synchronizer.h
resource_synchronizer_msgs/: CMakeLists.txt  README.md  package.xml
resource_synchronizer_msgs/msg/: MetaStateMachineHeader.msg  MetaStateMachinesStatus.msg  SubStateMachineHeader.msg
src/: ros_main.cpp  sig_main.cpp  st_main.cpp
src/message_storage/: PriorityHolder.cpp  ReactiveBuffer.cpp  ReactiveBufferStorage.cpp
src/plugins/: EventsPluginTest.cpp
src/state_machine/: CoordinationSignalsStorage.cpp  CoordinationState.cpp  CoordinationStateMachine.cpp  CoordinationTransition.cpp  EventStorage.cpp  StateMachine.cpp  StateMachineRunner.cpp  StateMachinesStorage.cpp  StateStorage.cpp
src/test/: LedManagerCoordinationPublisher.cpp  led_manager.cpp  led_managerArtificialLife.cpp  led_managerArtificialLife.h
