<package format="2">
  <name>resource_management</name>
  <version>0.2.0</version>
  <description>
      resource_management package.
  </description>
  <maintainer email="gsarthou@laas.fr">Guillaume Sarthou</maintainer>
  <license>TBD</license>

  <depend>roscpp</depend>
  <depend>resource_management_msgs</depend>
  <depend>pluginlib</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <resource_management plugin="${prefix}/plugins.xml" />
  </export>

</package>
