<package format="2">
  <name>resource_management_msgs</name>
  <version>0.2.0</version>
  <description>
      resource_management_msgs package.
  </description>
  <maintainer email="gsarthou@laas.fr">Guillaume Sarthou</maintainer>
  <license>TBD</license>

  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
