<package format="2">
  <name>resource_synchronizer_msgs</name>
  <version>0.1.0</version>
  <description>
      resource_synchronizer_msgs package.
  </description>
  <maintainer email="gsarthou@laas.fr">Guillaume Sarthou</maintainer>
  <license>TBD</license>

  <depend>std_msgs</depend>
  <depend>resource_management_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
